--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 section {
     min-height: 100vh;
-    padding: 10rem 9% 2rem;
+    padding: 8rem 9% 8rem;
 }
 
 span {
@@ -212,7 +212,7 @@ span {
 .services-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+   /*  align-items: center; */
     flex-wrap: wrap;
     gap: 2rem;
 }
