--- a/style.css
+++ b/style.css
@@ -34,6 +34,15 @@ section {
     padding: 8rem 9% 8rem;
 }
 
+h2{
+    font-size: 18pt;
+}
+
+.icon{
+    height: 2rem;
+}
+
+
 span {
     color: var(--main-color);
 }
@@ -224,7 +233,6 @@ span {
 }
 
 .services-container .services-box {
-    flex: 1 1 30rem;
     background: var(--smd-bg-color);
     padding: 3rem 2rem 2rem;
     border-radius: 2rem;
@@ -241,6 +249,7 @@ span {
 .services-box h3 {
     font-size: 2.6rem;
 }
+
 
 .services-box p {
     font-size: 1.6rem;
