--- a/style.css
+++ b/style.css
@@ -224,7 +224,8 @@ span {
 }
 
 .services-container .services-box {
-    flex: 1 1 30rem;
+   /*  flex: 1 1 30rem; */
+    max-width: 50rem;
     background: var(--smd-bg-color);
     padding: 3rem 2rem 2rem;
     border-radius: 2rem;
@@ -240,11 +241,29 @@ span {
 
 .services-box h3 {
     font-size: 2.6rem;
+    padding-bottom: 1rem;
 }
 
 .services-box p {
-    font-size: 1.6rem;
-    margin: 1rem 0 3rem;
+    font-size: 4rem;
+}
+
+.linguas span{
+    font-size: 2rem;
+}
+
+
+.linguas{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+article{
+    display: flex;
+    padding: 2rem;
+    flex-direction: column;
 }
 
 .portfolio {
