--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ span {
     color: var(--text-color);
     margin-left: 4rem;
     font-weight: 700;
+    transition: 200ms ease;
 }
 
 .navbar a:hover,
@@ -233,6 +234,7 @@ span {
 }
 
 .services-container .services-box {
+    max-width: 50rem;
     background: var(--smd-bg-color);
     padding: 3rem 2rem 2rem;
     border-radius: 2rem;
@@ -248,12 +250,30 @@ span {
 
 .services-box h3 {
     font-size: 2.6rem;
+    padding-bottom: 1rem;
 }
 
 
 .services-box p {
-    font-size: 1.6rem;
-    margin: 1rem 0 3rem;
+    font-size: 4rem;
+}
+
+.linguas span{
+    font-size: 2rem;
+}
+
+
+.linguas{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+article{
+    display: flex;
+    padding: 2rem;
+    flex-direction: column;
 }
 
 .portfolio {
@@ -266,7 +286,8 @@ span {
 
 .portfolio-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
     align-items: center;
     gap: 2.5rem;
 }
@@ -279,15 +300,23 @@ span {
     display: flex;
 }
 
-.portfolio-box img {
+/* .portfolio-box img {
     width: 100%;
     height: 25rem;
     transition: .5s ease;
     opacity: 0.7;
 }
-
-.portfolio-box:hover img {
+*/
+.portfolio-box:hover video {
     transform: scale(1.1);
+}
+
+.portfolio-box video{
+    width: 100%;
+    padding: 2rem;
+    height: 80%;
+    transition: .5s ease;
+    opacity: 0.7;
 }
 
 .portfolio-box .portfolio-layer {
@@ -528,7 +557,7 @@ span {
     }
 
     .about-img img {
-        width: 100vw;
+        width: 80vw;
         margin-top: 4rem;
     }
 }
