--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 }
 
 :root {
-    --bg-color: #191f36;
-    --smd-bg-color: #262848;
+    --bg-color: #232425;
+    --smd-bg-color: #3d3d41;
     --text-color: #fff;
     --main-color: #59B2F4;
 }
@@ -288,6 +288,7 @@ span {
     box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
+    max-height: 25rem;
 }
 
 /* .portfolio-box img {
