--- a/style.css
+++ b/style.css
@@ -487,6 +487,10 @@ span {
         grid-template-columns: repeat(2, 1fr);
     }
 
+    .portfolio-box video{
+        max-height: 20rem;
+    }
+
     .portfolio-layer h4 {
         font-size: 2.3rem;
         padding-bottom: 10rem;
